Adding TextReset case to GetUniqueStyleData, bug 36997 r=dbaron sr=attinasi a=brendan